--- a/apps/frontend/src/app/general/general.component.html
+++ b/apps/frontend/src/app/general/general.component.html
@@ -14,7 +14,7 @@
     <ph-window *ngIf="auth.role == 'admin' && this.tab == 'GNRL'" [title]="'ANNOUNCEMENT'" [subtitle]="'TR2805'" style="grid-row:6/19; grid-column: 38/58">
         <speaker-announcements></speaker-announcements>
     </ph-window> -->
-    <ph-window style="grid-row:1/11; grid-column: 38/58">
+    <ph-window [title]="'ANNOUNCEMENT'" [subtitle]="'RG6523'" style="grid-row:1/11; grid-column: 38/58">
         <speaker-announcements></speaker-announcements>
     </ph-window>
     <!-- <ph-window *ngIf="auth.role == 'admin' && this.tab == 'GNRL'" [title]="'FLUFF'" [subtitle]="'TR2805'" style="grid-row:19/36; grid-column: 38/58">
