--- a/apps/frontend/src/app/common/speaker-announcements/speaker-announcements.component.scss
+++ b/apps/frontend/src/app/common/speaker-announcements/speaker-announcements.component.scss
@@ -2,6 +2,7 @@
     display: flex;
     flex-direction: column;
     overflow: hidden;
+    background-color: #252526;
 }
 td.crossed {
     text-decoration: line-through;
