Migrated speaker-fluff

--- a/apps/frontend/src/app/general/general.component.html
+++ b/apps/frontend/src/app/general/general.component.html
@@ -11,15 +11,13 @@
     <ph-window *ngIf="auth.role == 'admin' && this.tab == 'GNRL'" [title]="'LOCKDOWN'" [subtitle]="'TR2805'" style="grid-row:1/6; grid-column: 38/58">
         <base-lockdown></base-lockdown>
     </ph-window>
-    <ph-window *ngIf="auth.role == 'admin' && this.tab == 'GNRL'" [title]="'ANNOUNCEMENT'" [subtitle]="'TR2805'" style="grid-row:6/19; grid-column: 38/58">
-        <speaker-announcements></speaker-announcements>
-    </ph-window> -->
+ -->
     <ph-window [title]="'ANNOUNCEMENT'" [subtitle]="'RG6523'" style="grid-row:1/11; grid-column: 38/58">
         <speaker-announcements></speaker-announcements>
     </ph-window>
-    <!-- <ph-window *ngIf="auth.role == 'admin' && this.tab == 'GNRL'" [title]="'FLUFF'" [subtitle]="'TR2805'" style="grid-row:19/36; grid-column: 38/58">
+    <ph-window [title]="'FLUFF'" [subtitle]="'TR2805'" style="grid-row:19/36; grid-column: 38/58">
         <speaker-fluff></speaker-fluff>
-    </ph-window> -->
+    </ph-window>
     <!-- <ph-window *ngIf="auth.role == 'admin' && this.tab == 'DRONE'" [title]="'EXPLOSIONS'" [subtitle]="'TR2805'" style="grid-row:1/32; grid-column: 1/46">
         <drone-bombardment></drone-bombardment>
     </ph-window> -->
