--- a/apps/frontend/src/app/common/speaker-fluff/speaker-fluff.component.html
+++ b/apps/frontend/src/app/common/speaker-fluff/speaker-fluff.component.html
@@ -1,5 +1,5 @@
 <ph-form>
-    <ph-button-select [label]="'State'" [(value)]="fluffState" (valueChange)="updateServerFluffState()">
+    <ph-button-select [label]="'State'" [value]="service.fluffState() ? 'on' : 'off'" (valueChange)="this.service.updateFluffState($event)">
         <ph-button [value]="'off'">OFF</ph-button>
         <ph-button [value]="'on'">ON</ph-button>
     </ph-button-select>
@@ -10,9 +10,12 @@
         <th>File</th>
         <th style="width: 64px;">Command</th>
     </tr>
-    <tr *ngFor="let file of fluffFiles; index as idx">
+    @for(file of service.fluffFiles(); track file; let idx = $index)
+    {
+    <tr>
         <td>{{idx}}</td>
         <td>{{file}}</td>
-        <td><ph-button [value]="file" (click)="playAnnoucement(file)">PLAY</ph-button></td>
+        <td><ph-button [value]="file" (click)="this.rpc.playAnnouncement(file)">PLAY</ph-button></td>
     </tr>
+    }
 </ph-table>
