--- a/apps/frontend/src/app/general/general.component.html
+++ b/apps/frontend/src/app/general/general.component.html
@@ -5,9 +5,7 @@
     <ph-window *ngIf="this.tab == 'GNRL'" [title]="'BASE DEVICE POWER'" [subtitle]="'GRD8015'" style="grid-row:5/12; grid-column: 1/38">
         <lsx-device-control></lsx-device-control>
     </ph-window>
-    <ph-window *ngIf="this.tab == 'GNRL'" [title]="'BASE POWER GRID'" [subtitle]="'GRD8015'" style="grid-row:12/36; grid-column: 1/38">
-        <lsx-light-control></lsx-light-control>
-    </ph-window>
+
     <ph-window *ngIf="auth.role == 'admin' && this.tab == 'GNRL'" [title]="'LOCKDOWN'" [subtitle]="'TR2805'" style="grid-row:1/6; grid-column: 38/58">
         <base-lockdown></base-lockdown>
     </ph-window>
@@ -17,6 +15,9 @@
     </ph-window>
     <ph-window [title]="'FLUFF'" [subtitle]="'TR2805'" style="grid-row:19/36; grid-column: 38/58">
         <speaker-fluff></speaker-fluff>
+    </ph-window>
+    <ph-window [title]="'BASE POWER GRID'" [subtitle]="'GRD8015'" style="grid-row:12/36; grid-column: 1/38">
+        <light-control></light-control>
     </ph-window>
     <!-- <ph-window *ngIf="auth.role == 'admin' && this.tab == 'DRONE'" [title]="'EXPLOSIONS'" [subtitle]="'TR2805'" style="grid-row:1/32; grid-column: 1/46">
         <drone-bombardment></drone-bombardment>
