--- a/apps/frontend/src/app/dashboard/dashboard.component.html
+++ b/apps/frontend/src/app/dashboard/dashboard.component.html
@@ -27,7 +27,7 @@
             <ph-window *ngIf="auth.role == 'admin' && this.tab == 'GNRL'" [title]="'ANNOUNCEMENT'" [subtitle]="'TR2805'" style="grid-row:6/19; grid-column: 38/58">
                 <speaker-announcements></speaker-announcements>
             </ph-window> -->
-            <ph-window *ngIf="auth.role == 'tec' && this.tab == 'GNRL'" [title]="'ANNOUNCEMENT'" [subtitle]="'TR2805'" style="grid-row:1/11; grid-column: 38/58">
+            <!-- <ph-window *ngIf="auth.role == 'tec' && this.tab == 'GNRL'" [title]="'ANNOUNCEMENT'" [subtitle]="'TR2805'" style="grid-row:1/11; grid-column: 38/58">
                 <speaker-announcements></speaker-announcements>
             </ph-window>
             <ph-window *ngIf="auth.role == 'admin' && this.tab == 'GNRL'" [title]="'FLUFF'" [subtitle]="'TR2805'" style="grid-row:19/36; grid-column: 38/58">
@@ -38,7 +38,7 @@
             </ph-window>
             <ph-window *ngIf="auth.role == 'admin' && this.tab == 'DRONE'" [title]="'DRONE'" [subtitle]="'TR2805'" style="grid-row:1/16; grid-column: 46/66">
                 <drone-control></drone-control>
-            </ph-window>
+            </ph-window> -->
         </div>
     </div>
 </div>
