--- a/apps/frontend/src/app/general/general.component.html
+++ b/apps/frontend/src/app/general/general.component.html
@@ -2,14 +2,15 @@
     <!-- <ph-window *ngIf="this.tab == 'GNRL'" [title]="'POWER PLANT'" [subtitle]="'TR2805'" style="grid-row:1/5; grid-column: 1/38">
         <app-power-plant></app-power-plant>
     </ph-window>
-    <ph-window *ngIf="this.tab == 'GNRL'" [title]="'BASE DEVICE POWER'" [subtitle]="'GRD8015'" style="grid-row:5/12; grid-column: 1/38">
-        <lsx-device-control></lsx-device-control>
-    </ph-window>
+
 
     <ph-window *ngIf="auth.role == 'admin' && this.tab == 'GNRL'" [title]="'LOCKDOWN'" [subtitle]="'TR2805'" style="grid-row:1/6; grid-column: 38/58">
         <base-lockdown></base-lockdown>
     </ph-window>
  -->
+    <ph-window [title]="'BASE DEVICE POWER'" [subtitle]="'GRD8015'" style="grid-row:5/12; grid-column: 1/38">
+        <power-control></power-control>
+    </ph-window>
     <ph-window [title]="'ANNOUNCEMENT'" [subtitle]="'RG6523'" style="grid-row:1/11; grid-column: 38/58">
         <speaker-announcements></speaker-announcements>
     </ph-window>
