--- a/apps/frontend/src/app/general/general.component.html
+++ b/apps/frontend/src/app/general/general.component.html
@@ -4,10 +4,11 @@
     </ph-window>
 
 
-    <ph-window *ngIf="auth.role == 'admin' && this.tab == 'GNRL'" [title]="'LOCKDOWN'" [subtitle]="'TR2805'" style="grid-row:1/6; grid-column: 38/58">
+
+ -->
+    <ph-window [title]="'LOCKDOWN'" [subtitle]="'TR2805'" style="grid-row:1/6; grid-column: 38/58">
         <base-lockdown></base-lockdown>
     </ph-window>
- -->
     <ph-window [title]="'BASE DEVICE POWER'" [subtitle]="'GRD8015'" style="grid-row:5/12; grid-column: 1/38">
         <power-control></power-control>
     </ph-window>
