--- a/apps/frontend/src/app/general/general.component.html
+++ b/apps/frontend/src/app/general/general.component.html
@@ -6,21 +6,27 @@
 
 
  -->
-    <ph-window [title]="'LOCKDOWN'" [subtitle]="'TR2805'" style="grid-row:1/6; grid-column: 38/58">
-        <base-lockdown></base-lockdown>
-    </ph-window>
-    <ph-window [title]="'BASE DEVICE POWER'" [subtitle]="'GRD8015'" style="grid-row:5/12; grid-column: 1/38">
-        <power-control></power-control>
-    </ph-window>
-    <ph-window [title]="'ANNOUNCEMENT'" [subtitle]="'RG6523'" style="grid-row:1/11; grid-column: 38/58">
-        <speaker-announcements></speaker-announcements>
-    </ph-window>
-    <ph-window [title]="'FLUFF'" [subtitle]="'TR2805'" style="grid-row:19/36; grid-column: 38/58">
-        <speaker-fluff></speaker-fluff>
-    </ph-window>
-    <ph-window [title]="'BASE POWER GRID'" [subtitle]="'GRD8015'" style="grid-row:12/36; grid-column: 1/38">
-        <light-control></light-control>
-    </ph-window>
+    <div class="row">
+        <ph-window [title]="'BASE DEVICE POWER'" [subtitle]="'GRD8015'" style="min-height: fit-content;">
+            <power-control></power-control>
+        </ph-window>
+        <ph-window [title]="'BASE POWER GRID'" [subtitle]="'GRD8015'" style="min-height: 0;">
+            <light-control></light-control>
+        </ph-window>
+    </div>
+    <div class="row">
+        <ph-window [title]="'LOCKDOWN'" [subtitle]="'TR2805'" style="min-height: fit-content;">
+            <base-lockdown></base-lockdown>
+        </ph-window>
+        <ph-window [title]="'ANNOUNCEMENT'" [subtitle]="'RG6523'" style="min-height: 0;">
+            <speaker-announcements></speaker-announcements>
+        </ph-window>
+        <ph-window [title]="'FLUFF'" [subtitle]="'TR2805'" style="min-height: 0;">
+            <speaker-fluff></speaker-fluff>
+        </ph-window>
+    </div>
+
+
     <!-- <ph-window *ngIf="auth.role == 'admin' && this.tab == 'DRONE'" [title]="'EXPLOSIONS'" [subtitle]="'TR2805'" style="grid-row:1/32; grid-column: 1/46">
         <drone-bombardment></drone-bombardment>
     </ph-window> -->
