--- a/apps/frontend/src/styles.scss
+++ b/apps/frontend/src/styles.scss
@@ -33,30 +33,27 @@ html, body {
     overflow: hidden;
 }
 
-// div {
-//     box-sizing: content-box;
-// }
 
 /* width */
 ::-webkit-scrollbar {
-    display: none !important;
+    display: none ;
 }
 
 /* Track */
 ::-webkit-scrollbar-track {
     // box-shadow: inset 0 0 5px grey; 
     // border-radius: 10px;
-    display: none !important;
+    display: none;
 
 }
 
 /* Handle */
 ::-webkit-scrollbar-thumb {
-    display: none !important;
+    display: none;
 }
 
 /* Handle on hover */
 ::-webkit-scrollbar-thumb:hover {
-    display: none !important;
+    display: none;
 }
 
