--- a/apps/frontend/src/app/app.component.html
+++ b/apps/frontend/src/app/app.component.html
@@ -1,1 +1,6 @@
-<router-outlet></router-outlet>
+<div class="content">
+    <router-outlet></router-outlet>
+    @if (!lsxGateway.isConnected()) {
+        <app-overlay></app-overlay>
+    }
+</div>
