--- a/apps/frontend/src/app/drone/drone-bombardment/drone-bombardment.component.html
+++ b/apps/frontend/src/app/drone/drone-bombardment/drone-bombardment.component.html
@@ -1,5 +1,5 @@
 <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
-	 viewBox="0 0 516.7 320" style="enable-background:new 0 0 516.7 320;" xml:space="preserve">
+	 viewBox="0 0 516.7 320" style="enable-background:new 0 0 516.7 320;" xml:space="preserve" preserveAspectRatio="xMidYMid meet">
 <style type="text/css">
 	.st0{fill:none;stroke:#AFAFAF;stroke-width:0.75;stroke-miterlimit:10;}
 	.st1{fill:none;stroke:#AFAFAF;stroke-width:0.75;stroke-linecap:square;stroke-miterlimit:10;}
