Added technical component for tec section

--- a/apps/frontend/src/app/common/light-control/light-control.component.html
+++ b/apps/frontend/src/app/common/light-control/light-control.component.html
@@ -6,11 +6,13 @@
             <ph-button [value]="lightSwitchState.SWITCH_STATE_OFF">OFF</ph-button>
             <ph-button [value]="lightSwitchState.SWITCH_STATE_ON">ON</ph-button>
         </ph-button-select>
+        @if(authz.hasRole('admin')) {
         <ph-button-select [label]="'Lock'" [(value)]="light.lockState"
             (valueChange)="updateLightLockState(light.id, $event)">
             <ph-button [value]="lightLockState.LOCK_STATE_UNLOCKED">OFF</ph-button>
             <ph-button [value]="lightLockState.LOCK_STATE_LOCKED">ON</ph-button>
         </ph-button-select>
+        }
         <ph-button-select [label]="'Power'" [(value)]="light.powerState"
             (valueChange)="updateLightPowerState(light.id, $event)">
             <ph-button [value]="lightPowerState.POWER_STATE_UNPOWERED">OFF</ph-button>
@@ -18,6 +20,7 @@
             <ph-button [value]="lightPowerState.POWER_STATE_CRITICAL">CRITICAL</ph-button>
             <ph-button [value]="lightPowerState.POWER_STATE_POWERED">ON</ph-button>
         </ph-button-select>
+        @if(authz.hasRole('admin')) {
         <ph-button-select [label]="'DMX'" [(value)]="light.dmxState"
             (valueChange)="updateLightDMXState(light.id, $event)">
             <ph-button [value]="lightDMXState.DMX_STATE_OFF">OFF</ph-button>
@@ -25,6 +28,7 @@
             <ph-button [value]="lightDMXState.DMX_STATE_WHITE">WHITE</ph-button>
             <ph-button [value]="lightDMXState.DMX_STATE_FLICKER">FLICKER</ph-button>
         </ph-button-select>
+        }
     </ph-group>
     }
 </ph-form>
